[package]
name = "chronograf"
authors = ["J/A <archer884@zoho.com>"]
version = "0.1.0"
edition = "2021"
description = "A stopwatch."
license = "Unlicense"
repository = "https://github.com/archer884/chronograf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta = "0.12.1"
